<resources>
    <string name="app_name">ContactManager</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="already_a_user_click_me"><u>Already a user? Click Me</u></string>
    <string name="login">Login</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
    <string name="contact_added">Contact Added</string>
    <string name="ok">OK</string>
</resources>